--- a/definitions/BetPayload.yaml
+++ b/definitions/BetPayload.yaml
@@ -1,10 +1,10 @@
-type: "object"
+type: object
 properties:
   amount:
-    type: "integer"
-    format: "int64"
-    description: "The amount subtracted from the wallet. Needs to be positive"
+    type: integer
+    format: int64
+    description: The amount subtracted from the wallet. Needs to be positive
   virtualAmount:
-    type: "integer"
-    format: "int64"
-    description: "Freespins. For later use."
+    type: integer
+    format: int64
+    description: Freespins. For later use.
