--- a/definitions/Wallet.yaml
+++ b/definitions/Wallet.yaml
@@ -1,5 +1,5 @@
-type: "object"
+type: object
 properties:
   amount:
-    type: "integer"
-    format: "int64"
+    type: integer
+    format: int64
